--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,11 +1,16 @@
 
 
 <div class="login_container">
-  <h2>Iniciar sesión</h2>
+  <h2>Crear Cuenta</h2>
   <form>
     <div>
-      <label for="userName">Usuario:</label>
+      <label for="userName">Nombre Completo:</label>
       <input type="text" id="userName" name="userName" placeholder="Nombre de usuario" required>
+     
+    </div>
+    <div>
+      <label for="userEmail">Email:</label>
+      <input type="text" id="userEmail" name="userEmail" placeholder="Correo de usuario" required>
      
     </div>
     <div>
@@ -13,14 +18,10 @@
       <label for="password">Contraseña:</label>
       <input type="password" id="password" name="password" placeholder="Contraseña" required>
     </div>
-    <nav class="TopNav">
-        <a href="inicio.html">Olvide mi contraseña</a>
-        
-      </nav>
+    
    
     
     
     
-    <button type="submit">Ingresar</button>
-   <button type="button" routerLink="/register">Crear Cuenta</button>
-</form>
+    <button type="submit" routerLink="">Ingresar</button>
+   </form>
