agregar principios en home

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,66 @@
-<p>home works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prueba 1</title>
+    <link rel="icon" href="Archivos/icon.jpg" type="image/jpg">
+    <link rel="stylesheet" href="home.component.css">
+
+</head>
+
+<body>
+
+    <nav>
+        <div class="LinksNav">
+            <a href="index.html">Inicio</a>
+            <a href="articulos.html">Articulos</a>
+            <a href="Mensajes.html">Mensajes</a>
+        </div>
+        <img class="userLogo" src="Archivos/voy caminando.jpg" alt="Archivos">
+    </nav>
+
+    <main>
+        <h1>Bienvenido a Tienda Don Pancho</h1>
+        <section id="inicio">
+            <h2>Inicio</h2>
+            <p>Esta es la sección de bienvenida. Aquí puedes presentar tu sitio, negocio, portafolio o cualquier
+                propósito de tu página.</p>
+        </section>
+
+        <section id="Articulos">
+            <h2>Articulos</h2>
+            <p>Ofrecemos diversos articulos adaptados a tus necesidades.</p>
+            <div>Articulos mas comprados: </div>
+            <ul>
+                <li>Arroz con pollo.</li>
+                <li>Pan de queso.</li>
+                <li>Lechona.</li>
+            </ul>
+        </section>
+
+
+        <section id="contacto">
+            <h1>Contacto</h1>
+            <p>Para más información, escríbenos a <a href="hervindc15@gmail.com">hervindc15@gmail.com</a> o visítanos en
+                nuestras redes.</p>
+        </section>
+
+        <a class="insta" href="https://www.instagram.com/paan.t0" target="_blank">
+            <img src="Archivos/Instagram.png" alt="Instagram" style="width:40px; height:40px; cursor:pointer;">
+        </a>
+
+    </main>
+
+
+    <footer>
+        <p>&copy; 2025 Mi Página Web. Todos los derechos reservados.</p>
+    </footer>
+
+
+</body>
+
+
+
+</html>
