Cambios en home, y crear componentes login y register

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -22,9 +22,9 @@
     </nav>
 
     <main>
-        <h1>Bienvenido a Tienda Don Pancho</h1>
+        <h1>Bienvenido a TrikiTrueke</h1>
         <section id="inicio">
-            <h2>Inicio</h2>
+            <h2>La mejor aplicacion web de las webs de trueques en el globo terraqueo</h2>
             <p>Esta es la sección de bienvenida. Aquí puedes presentar tu sitio, negocio, portafolio o cualquier
                 propósito de tu página.</p>
         </section>
