--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,26 +1,1 @@
-
-
-<div class="login_container">
-  <h2>Iniciar sesión</h2>
-  <form>
-    <div>
-      <label for="userName">Usuario:</label>
-      <input type="text" id="userName" name="userName" placeholder="Nombre de usuario" required>
-     
-    </div>
-    <div>
-      
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" placeholder="Contraseña" required>
-    </div>
-    <nav class="TopNav">
-        <a href="inicio.html">Olvide mi contraseña</a>
-        
-      </nav>
-   
-    
-    
-    
-    <button type="submit">Ingresar</button>
-   <button type="button" routerLink="/register">Crear Cuenta</button>
-</form>
+<p>login works!</p>
