--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,27 +1,1 @@
-
-
-<div class="login_container">
-  <h2>Crear Cuenta</h2>
-  <form>
-    <div>
-      <label for="userName">Nombre Completo:</label>
-      <input type="text" id="userName" name="userName" placeholder="Nombre de usuario" required>
-     
-    </div>
-    <div>
-      <label for="userEmail">Email:</label>
-      <input type="text" id="userEmail" name="userEmail" placeholder="Correo de usuario" required>
-     
-    </div>
-    <div>
-      
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" placeholder="Contraseña" required>
-    </div>
-    
-   
-    
-    
-    
-    <button type="submit" routerLink="">Ingresar</button>
-   </form>
+<p>register works!</p>
