me falta pero ya casi acabo XD

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,2 +1,58 @@
-<p>login works!</p>
-<h1>oliwiwi</h1>
+<body>
+    <div class="container" id="container">
+        <div class="form-container Crear-cuenta">
+            <form>
+                <h1>Crear Cuenta</h1>
+                <div class="Iconos-Social">
+                    <a href="#" class="icon"><i class="fa brands fa-google"></i></a>
+                    <a href="#" class="icon"><i class="fa brands fa-facebook"></i></a>
+                    <a href="#" class="icon"><i class="fa brands fa-git hub"></i></a>
+                    <a href="#" class="icon"><i class="fa brands fa-Apple"></i></a>
+
+                </div>
+                <span>O usa tu correo para registrarte</span>
+                <input type="text" placeholder="Name">
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
+                <button>Crear</button>
+            </form>
+
+        </div>
+<div class="form-container Iniciar-Sesion">
+    <form>
+       <h1>Iniciar Sesion</h1>
+                <div class="Iconos-Social">
+                    <a href="#" class="icon"><i class="fa brands fa-google"></i></a>
+                    <a href="#" class="icon"><i class="fa brands fa-facebook"></i></a>
+                    <a href="#" class="icon"><i class="fa brands fa-git hub"></i></a>
+                    <a href="#" class="icon"><i class="fa brands fa-Apple"></i></a>
+
+                </div>
+                <span>O usa tu correo y ontraseña</span>
+               
+                <input type="email" placeholder="Email">
+                <input type="password" placeholder="Password">
+                <a href="#">Olvidaste tu contraseña manito?</a>
+                <button>Iniciar Sesion</button>
+          
+    </form>
+
+</div>
+<div class="toggle-container">
+    <div class="toggle">
+        <div class="toggle-panel toggle-left">
+            <h1>Bienvenido pri</h1>
+            <p>Ingrese sus datos personales para utilizar todas las funciones</p>
+            <button class="hidden" id="login">Inciar Sesion</button>
+
+        </div>
+        <div class="toggle-panel toggle-rigth">
+        <h1>Hola, amiguito</h1>
+        <p>Registra tus datos personales para utilizar todas las funciones</p>
+        <button class="hidden" id="register">Crear Cuenta</button>
+        </div>
+    </div>
+
+</div>
+    </div>
+</body>
