Acabe la parte de inicio de Sesion

--- a/src/app/categorias/categorias.component.html
+++ b/src/app/categorias/categorias.component.html
@@ -1,1 +1,6 @@
-<p>categorias works!</p>
+<nav>
+    <ul>
+        <li><a href="#">Mascotas</a></li>
+        <li><a href="#">Consolas</a></li>
+    </ul>
+</nav>
