--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,6 @@
 <body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+
     <div class="container" id="container">
         <div class="form-container Crear-cuenta">
             <form>
@@ -24,7 +26,7 @@
                 <div class="Iconos-Social">
                     <a href="#" class="icon"><i class="fa brands fa-google"></i></a>
                     <a href="#" class="icon"><i class="fa brands fa-facebook"></i></a>
-                    <a href="#" class="icon"><i class="fa brands fa-git hub"></i></a>
+                    <a href="#" class="icon"><i class="fa brands fa-github"></i></a>
                     <a href="#" class="icon"><i class="fa brands fa-Apple"></i></a>
 
                 </div>
@@ -46,7 +48,7 @@
             <button class="hidden" id="login">Inciar Sesion</button>
 
         </div>
-        <div class="toggle-panel toggle-rigth">
+        <div class="toggle-panel toggle-right">
         <h1>Hola, amiguito</h1>
         <p>Registra tus datos personales para utilizar todas las funciones</p>
         <button class="hidden" id="register">Crear Cuenta</button>
@@ -55,4 +57,5 @@
 
 </div>
     </div>
+    <script src="login.component.ts" ></script>
 </body>
