--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,22 @@
 <body>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-
+    
     <div class="container" id="container">
         <div class="form-container Crear-cuenta">
             <form>
                 <h1>Crear Cuenta</h1>
                 <div class="Iconos-Social">
-                    <a href="#" class="icon"><i class="fa brands fa-google"></i></a>
-                    <a href="#" class="icon"><i class="fa brands fa-facebook"></i></a>
-                    <a href="#" class="icon"><i class="fa brands fa-git hub"></i></a>
-                    <a href="#" class="icon"><i class="fa brands fa-Apple"></i></a>
-
+                   <a href="#" class="icon"><img src="public/icons8-logo-de-google.svg" alt="Google"></a>
+                   <a href="#" class="icon"><img src="public/icons8-facebook-nuevo.svg" alt="facbook"></a>
+                   <a href="#" class="icon"><img src="public/icons8-github.svg" alt="Git hub"></a>
+                   <a href="#" class="icon"><img src="public/icons8-mac-os.svg" alt="Apple"></a>
+                    
                 </div>
                 <span>O usa tu correo para registrarte</span>
-                <input type="text" placeholder="Name">
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
-                <button>Crear</button>
+                <input type="text" placeholder="Name" required>
+                <input type="email" placeholder="Email" required>
+                <input type="password" placeholder="Password" required>
+                <input type="password" placeholder="Confirm Password" required>
+                <button type="submit" >Crear</button>
             </form>
 
         </div>
@@ -24,17 +24,17 @@
     <form>
        <h1>Iniciar Sesion</h1>
                 <div class="Iconos-Social">
-                    <a href="#" class="icon"><i class="fa brands fa-google"></i></a>
-                    <a href="#" class="icon"><i class="fa brands fa-facebook"></i></a>
-                    <a href="#" class="icon"><i class="fa brands fa-github"></i></a>
-                    <a href="#" class="icon"><i class="fa brands fa-Apple"></i></a>
-
+                    <a href="#" class="icon"><img src="public/icons8-facebook-nuevo.svg" alt="Google"></a>
+                   <a href="#" class="icon"><img src="public/icons8-facebook-nuevo.svg" alt="facbook"></a>
+                   <a href="#" class="icon"><img src="public/icons8-github.svg" alt="Git hub"></a>
+                   <a href="#" class="icon"><img src="public/icons8-mac-os.svg" alt="Apple"></a>
+               
                 </div>
                 <span>O usa tu correo y ontraseña</span>
                
-                <input type="email" placeholder="Email">
-                <input type="password" placeholder="Password">
-                <a href="#">Olvidaste tu contraseña manito?</a>
+                <input type="email" placeholder="Email" required>
+                <input type="password" placeholder="Password" required>
+           <a href="#">Olvidaste tu contraseña manito?</a>
                 <button>Iniciar Sesion</button>
           
     </form>
