Suban las imagenes a assets

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,11 +5,11 @@
             <form>
                 <h1>Crear Cuenta</h1>
                 <div class="Iconos-Social">
-                   <a href="#" class="icon"><img src="public/icons8-logo-de-google.svg" alt="Google"></a>
-                   <a href="#" class="icon"><img src="assets/icons8-facebook-nuevo.svg" alt="facbook"></a>
-                   <a href="#" class="icon"><img src="public/icons8-github.svg" alt="Git hub"></a>
-                   <a href="#" class="icon"><img src="public/icons8-mac-os.svg" alt="Apple"></a>
-                    
+                     <a href="#" class="icon"><img src="assets/icons8-logo-de-google.svg" alt="Google"></a>
+                  <a href="#" class="icon"><img src="assets/icons8-facebook-nuevo.svg" alt="facbook"></a>
+                   <a href="#" class="icon"><img src="assets/icons8-github.svg" alt="Git hub"></a>
+                   <a href="#" class="icon"><img src="assets/icons8-mac-os.svg" alt="Apple"></a>
+      
                 </div>
                 <span>O usa tu correo para registrarte</span>
                 <input type="text" placeholder="Name" required>
@@ -24,10 +24,10 @@
     <form>
        <h1>Iniciar Sesion</h1>
                 <div class="Iconos-Social">
-                    <a href="#" class="icon"><img src="public/icons8-facebook-nuevo.svg" alt="Google"></a>
+                    <a href="#" class="icon"><img src="assets/icons8-logo-de-google.svg" alt="Google"></a>
                    <a href="#" class="icon"><img src="assets/icons8-facebook-nuevo.svg" alt="facbook"></a>
-                   <a href="#" class="icon"><img src="public/icons8-github.svg" alt="Git hub"></a>
-                   <a href="#" class="icon"><img src="public/icons8-mac-os.svg" alt="Apple"></a>
+                   <a href="#" class="icon"><img src="assets/icons8-github.svg" alt="Git hub"></a>
+                   <a href="#" class="icon"><img src="assets/icons8-mac-os.svg" alt="Apple"></a>
                
                 </div>
                 <span>O usa tu correo y ontraseña</span>
