--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -119,13 +119,13 @@ margin: 20px 0;
 
 }
 .Iconos-Social a {
-    border: 1px solid #ccc;
+    border: 1px solid #fcfcfc;
     border-radius: 20%;
     display: inline-flex;
     justify-content: center;
     align-items: center ;
     margin :0 3px;
-    width: 40px;
+    width: 43.2px;
     height: 40px;
 }
 .toggle-container {
